# streamlit-whisper-demo

./: README.md  app.py  pyproject.toml  utils.py
